[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyslxd"
version = "0.1.0"
description = "Python library for Shure SLX-D wireless microphone receivers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sean Greenhalgh" }
]
keywords = ["shure", "slxd", "wireless", "microphone", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/seangreenhalgh/pyslxd"
Repository = "https://github.com/seangreenhalgh/pyslxd"

[tool.hatch.build.targets.wheel]
packages = ["src/pyslxd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.10",
    "ruff>=0.8",
]
